--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>uoi356</groupId>
-    <artifactId>cs4743-assignments</artifactId>
+    <artifactId>cs4743-assignment</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
