--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     </properties>
 
     <dependencies>
+    
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
@@ -41,6 +42,12 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>11</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-web</artifactId>
+            <version>3.5.1</version>
         </dependency>
 
     </dependencies>
