--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
 		<vertx.version>3.8.1</vertx.version>
 		<junit-jupiter.version>5.4.0</junit-jupiter.version>
-		<main.verticle>javafx.TestVerticle</main.verticle>
+		<main.verticle>webservice.TestVerticle</main.verticle>
     </properties>
 	
 	<dependencyManagement>
@@ -134,6 +134,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven-compiler-plugin.version}</version>
 			</plugin>
+            <!--
 			<plugin>
 				<artifactId>maven-shade-plugin</artifactId>
 				<version>${maven-shade-plugin.version}</version>
@@ -165,6 +166,7 @@
 					</execution>
 				</executions>
 			</plugin>
+			-->
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${maven-surefire-plugin.version}</version>
@@ -222,8 +224,8 @@
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>libs/</classpathPrefix>
                             <mainClass>
-                                javafx.TestVerticle
-                            </mainClass>
+								webservice.TestVerticle
+							</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
