--- a/pom.xml
+++ b/pom.xml
@@ -146,7 +146,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven-compiler-plugin.version}</version>
 			</plugin>
-            <!--
+
+			<!--
 			<plugin>
 				<artifactId>maven-shade-plugin</artifactId>
 				<version>${maven-shade-plugin.version}</version>
@@ -161,7 +162,7 @@
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<manifestEntries>
-										<Main-Class>io.vertx.core.Launcher</Main-Class>
+										<Main-Class>javafx.NewMain</Main-Class>
 										<Main-Verticle>${main.verticle}</Main-Verticle>
 									</manifestEntries>
 								</transformer>
@@ -179,6 +180,7 @@
 				</executions>
 			</plugin>
 			-->
+
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${maven-surefire-plugin.version}</version>
@@ -236,7 +238,7 @@
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>libs/</classpathPrefix>
                             <mainClass>
-								webservice.TestVerticle
+								javafx.NewMain
 							</mainClass>
                         </manifest>
                     </archive>
